--- a/src/ui/internal-audit/src/app/views/private/branch-audit/workpaper/workpaper.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/workpaper/workpaper.component.html
@@ -97,7 +97,7 @@
           <div class="col-md-6">
 
             <div class="form-floating mb-3">
-              <input type="text" class="form-control" formControlName="scheduleCode" id="scheduleCode" placeholder="scheduleCode" [readonly]="true">
+              <!-- <input type="text" class="form-control" formControlName="scheduleCode" id="scheduleCode" placeholder="scheduleCode" [readonly]="true"> -->
               <label for="floatingInput">Schedule Id</label>
             </div>
           </div>
@@ -360,21 +360,6 @@
           </div>
         </div>
 
-
-
-        
-
-          
-
-          
-         
-         
-  
-          <!-- <div class="form-floating">
-            <textarea class="form-control" placeholder="Remarks" formControlName="remarks" id="remarks"></textarea>
-            <label for="floatingTextarea">Remark</label>
-          </div> -->
-  
       </div>
     </c-modal-body>
     <c-modal-footer>
