Workpaper Edit and Set Value

--- a/src/ui/internal-audit/src/app/views/private/branch-audit/workpaper/workpaper-create/workpaper-create.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/workpaper/workpaper-create/workpaper-create.component.html
@@ -6,7 +6,7 @@
       <c-card-body>
         <form [formGroup]="workpaperForm" (ngSubmit)="onSubmit()" novalidate>
             <div class="col-md-12" >
-                <!-- <input type="hidden" formControlName="id"/> -->
+                <input type="hidden" formControlName="id"/>
         
         
                 <div class="row">
