--- a/src/ui/internal-audit/src/app/views/private/branch-audit/issue-list/issue-list.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/issue-list/issue-list.component.html
@@ -46,11 +46,11 @@
                       <tr *ngFor="let issue of issues">
                         <td>{{ issue.code }}</td>
                         <td>{{ issue.issueTitle }}</td>
-                        <td>{{ issue.owner }}</td>
-                        <td>{{ issue.rating }}</td>
-                        <td>{{ issue.actionOwner }}</td>
+                        <td>{{ issue.issueOwners }}</td>
+                        <td>{{ issue.ratingType }}</td>
+                        <td>{{ issue.actionOwners }}</td>
                         <td>{{ issue.targetDate | date:'medium' }}</td>
-                        <td>{{ issue.status }}</td>
+                        <td>{{ issue.statusType }}</td>
                         <td class="text-center">
                           <div class="btn-group" role="group" aria-label="Basic example">
                             <button type="button" class="btn btn-secondary btnEditColor" [routerLink]="['/branch-audit/new-issue',issue.id]">
